--- a/roominventory/pubspec.yaml
+++ b/roominventory/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.6  # Add this line for Cupertino icons
+  http: ^1.3.0
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
