--- a/roominventory/pubspec.yaml
+++ b/roominventory/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   cupertino_icons: ^1.0.6  # Add this line for Cupertino icons
   http: ^1.3.0
   intl: ^0.20.2
+  shared_preferences: ^2.3.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
