--- a/roominventory/pubspec.yaml
+++ b/roominventory/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   intl: ^0.20.2
   shared_preferences: ^2.3.3
   provider: ^6.1.2
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
