--- a/roominventory/pubspec.yaml
+++ b/roominventory/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   shared_preferences: ^2.3.3
   provider: ^6.1.2
   uuid: ^4.5.1
+  table_calendar: ^3.2.0
 
 dev_dependencies:
   flutter_test:
