--- a/roominventory/pubspec.yaml
+++ b/roominventory/pubspec.yaml
@@ -11,11 +11,20 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.6  # Add this line for Cupertino icons
   http: ^1.3.0
-  intl: ^0.20.2
+
   shared_preferences: ^2.3.3
   provider: ^6.1.2
   uuid: ^4.5.1
-  table_calendar: ^3.2.0
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  google_sign_in: ^6.3.0
+  
+  path_provider: ^2.0.14
+  permission_handler: ^11.1.0
+  file_saver: ^0.2.14
+  icalendar: ^0.1.3
+  table_calendar: ^3.0.9
+
 
 dev_dependencies:
   flutter_test:
