--- a/roominventory/android/local.properties
+++ b/roominventory/android/local.properties
@@ -1,4 +1,4 @@
 sdk.dir=/Users/itgdevops/Library/Android/sdk
 flutter.sdk=/Users/itgdevops/documents/flutter
-flutter.buildMode=debug
+flutter.buildMode=release
 flutter.versionName=0.1.0
