--- a/roominventory/pubspec.yaml
+++ b/roominventory/pubspec.yaml
@@ -20,16 +20,19 @@ dependencies:
   google_sign_in: ^6.3.0
   
   path_provider: ^2.0.14
-  permission_handler: ^11.1.0
-  file_saver: ^0.2.14
+  permission_handler: ^12.0.1
+  file_saver: ^0.3.1
   icalendar: ^0.1.3
   table_calendar: ^3.0.9
-
+  image_picker: ^1.0.4
+  qr_flutter: ^4.1.0
+  share_plus: ^11.1.0
+  qr_code_scanner_plus: ^2.0.10+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
